changed folder structure and addedexternal/kmeans_pytorch as a submodule

--- a/gts/template_gts/repari_R.ipynb
+++ b/gts/template_gts/repari_R.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -55,18 +55,7 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['lamp', 'duck', 'driller', 'phone', 'eggbox', 'holepuncher', 'can', 'ape', 'cam', 'iron', 'cat', 'benchvise', 'glue'])\n",
-      "{'img_id': '0', 'img_name': './templates/linemod/test/lamp/000000.png', 'mask_name': './templates/linemod/test/lamp/mask_000000.png', 'obj_id': 14, 'bbox_obj': [231, 72, 203, 380], 'cam_R_m2c': [[-0.23873246299757991, -0.9710853778690672, 0.0], [-0.11395658634881299, 0.0280151850227083, -0.9930906533825947], [0.9643758123982759, -0.23708297766190276, -0.11734970883701012]], 'cam_t_m2c': [0.0, 0.0, 400.0], 'model_path': './models/obj_000014.ply', 'model_info': {'diameter': 282.601, 'min_x': -101.573, 'min_y': -58.8763, 'min_z': -106.558, 'size_x': 203.146, 'size_y': 117.753, 'size_z': 213.116}, 'cam_K': [572.4114, 0.0, 325.2611, 0.0, 573.57043, 242.04899, 0.0, 0.0, 1.0], 'img_crop': './templates/linemod_desc/test/lamp/000000.png', 'img_desc': './templates/linemod_desc/test/lamp/000000.npy', 'obj_name': 'lamp', 'uv_crop': './templates/linemod_desc/test/lamp/000000_uv.npy'}\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "14",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m object_name \u001b[38;5;129;01min\u001b[39;00m lmo_gt\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[1;32m      8\u001b[0m     new_lmo_gt[\u001b[38;5;28mstr\u001b[39m(lmo_gt[object_name][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobj_id\u001b[39m\u001b[38;5;124m'\u001b[39m])] \u001b[38;5;241m=\u001b[39m lmo_gt[object_name]\n\u001b[0;32m---> 10\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43mnew_lmo_gt\u001b[49m\u001b[43m[\u001b[49m\u001b[43mlmo_gt\u001b[49m\u001b[43m[\u001b[49m\u001b[43mobject_name\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mobj_id\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m)):\n\u001b[1;32m     11\u001b[0m         new_lmo_gt[lmo_gt[object_name][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobj_id\u001b[39m\u001b[38;5;124m'\u001b[39m]][i][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobj_name\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m object_name\n\u001b[1;32m     12\u001b[0m         new_lmo_gt[lmo_gt[object_name][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobj_id\u001b[39m\u001b[38;5;124m'\u001b[39m]][i][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muv_crop\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnew_lmo_gt[lmo_gt[object_name][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobj_id\u001b[39m\u001b[38;5;124m'\u001b[39m]][i][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimg_crop\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.png\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_uv.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 14"
+      "{'img_id': '0', 'img_name': './templates/linemod/test/lamp/000000.png', 'mask_name': './templates/linemod/test/lamp/mask_000000.png', 'obj_id': 14, 'bbox_obj': [231, 72, 203, 380], 'cam_R_m2c': [[-0.23873246299757991, -0.9710853778690672, 0.0], [-0.11395658634881299, 0.0280151850227083, -0.9930906533825947], [0.9643758123982759, -0.23708297766190276, -0.11734970883701012]], 'cam_t_m2c': [0.0, 0.0, 400.0], 'model_path': './models/obj_000014.ply', 'model_info': {'diameter': 282.601, 'min_x': -101.573, 'min_y': -58.8763, 'min_z': -106.558, 'size_x': 203.146, 'size_y': 117.753, 'size_z': 213.116}, 'cam_K': [572.4114, 0.0, 325.2611, 0.0, 573.57043, 242.04899, 0.0, 0.0, 1.0], 'img_crop': './templates/linemod_desc/test/lamp/000000.png', 'img_desc': './templates/linemod_desc/test/lamp/000000.npy', 'obj_name': 'lamp', 'uv_crop': './templates/linemod_desc/test/lamp/000000_uv.npy', 'object_name': 'lamp'}\n"
      ]
     }
    ],
@@ -83,19 +72,20 @@
     "    \n",
     "    for i in range(len(new_lmo_gt[obj_id])):\n",
     "        new_lmo_gt[obj_id][i]['object_name'] = object_name\n",
-    "        new_lmo_gt[obj_id][i]['uv_crop'] = f\"{new_lmo_gt[obj_id][i]['img_crop'].split('.png')[0]}_uv.npy\""
+    "        new_lmo_gt[obj_id][i]['uv_crop'] = f\"{new_lmo_gt[obj_id][i]['img_crop'].split('.png')[0]}_uv.npy\"\n",
+    "        new_lmo_gt[obj_id][i]['obj_id'] = obj_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys([14, 9, 8, 15, 10, 12, 5, 1, 4, 13, 6, 2, 11])\n"
+      "dict_keys(['14', '9', '8', '15', '10', '12', '5', '1', '4', '13', '6', '2', '11'])\n"
      ]
     },
     {
@@ -104,7 +94,7 @@
        "{'img_id': '0',\n",
        " 'img_name': './templates/linemod/test/lamp/000000.png',\n",
        " 'mask_name': './templates/linemod/test/lamp/mask_000000.png',\n",
-       " 'obj_id': 14,\n",
+       " 'obj_id': '14',\n",
        " 'bbox_obj': [231, 72, 203, 380],\n",
        " 'cam_R_m2c': [[-0.23873246299757991, -0.9710853778690672, 0.0],\n",
        "  [-0.11395658634881299, 0.0280151850227083, -0.9930906533825947],\n",
@@ -122,10 +112,11 @@
        " 'img_crop': './templates/linemod_desc/test/lamp/000000.png',\n",
        " 'img_desc': './templates/linemod_desc/test/lamp/000000.npy',\n",
        " 'obj_name': 'lamp',\n",
-       " 'uv_crop': './templates/linemod_desc/test/lamp/000000_uv.npy'}"
+       " 'uv_crop': './templates/linemod_desc/test/lamp/000000_uv.npy',\n",
+       " 'object_name': 'lamp'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,15 +124,18 @@
    "source": [
     "print(new_lmo_gt.keys())\n",
     "\n",
-    "new_lmo_gt[14][0]"
+    "new_lmo_gt['14'][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"linemod_template_gt.json\",\"w\") as f:\n",
+    "    json.dump(new_lmo_gt,f)"
+   ]
   },
   {
    "cell_type": "code",
